creat swagger per TipoAlojamiento
